--- a/GraduationDesignSystem/WebContent/static/css/main/login.css
+++ b/GraduationDesignSystem/WebContent/static/css/main/login.css
@@ -1,5 +1,21 @@
 body {
-	background: #fff url("../../../static/images/background.jpg") center center no-repeat;
+	/* 加载背景图 */
+	background-image: url("../../../static/images/background.jpg");
+	
+	/* 背景图垂直、水平均居中 */
+	background-position: center center;
+	
+	/* 背景图不平铺 */
+	background-repeat: no-repeat;
+	
+	/* 当内容高度大于图片高度时，背景图像的位置相对于viewport固定 */
+	background-attachment: fixed;
+	
+	/* 让背景图基于容器大小伸缩 */
+	background-size: cover;
+	
+	/* 设置背景颜色，背景图加载过程中会显示背景色 */
+	background-color: #464646;
 }
 h1 {
     margin: 80px auto 50px auto;
@@ -49,7 +65,7 @@ sub {
 	bottom: -1px;
 }
 .header .choose #switch-stu-login {
-	margin-right: 80px;
+	margin-right: 10em;
 }
 
 .header .choose .switch-btn {
