登录页面 修改成教师和学生登录

--- a/GraduationDesignSystem/WebContent/static/css/main/login.css
+++ b/GraduationDesignSystem/WebContent/static/css/main/login.css
@@ -57,6 +57,10 @@ sub {
 	color: #333;
 }
 
+.header .choose a:focus {
+	text-decoration: none;
+}
+
 .header .choose .switch-line {
 	position: absolute;
 	width: 64px;
