--- a/GraduationDesignSystem/WebContent/static/css/main/index.css
+++ b/GraduationDesignSystem/WebContent/static/css/main/index.css
@@ -73,6 +73,9 @@ aside,section{
 	-o-transition: all 0.4s ease;
 	transition: all 0.4s ease;
 }
+.accordion .title a{
+	color:#4D4D4D;
+}
 .accordion .title:hover{
 	background: #eee;
 }
@@ -98,7 +101,7 @@ aside,section{
 	font-size: 1em;
 }
 
-.accordion li.open .title {
+.accordion li.open .title, a {
 	color: #b63b4d;
 }
 
