各个模块页面的修改

--- a/GraduationDesignSystem/WebContent/static/css/main/index.css
+++ b/GraduationDesignSystem/WebContent/static/css/main/index.css
@@ -106,7 +106,7 @@ aside,section{
 	color: #2980B9;
 }
 .accordion li.open .title, a {
-	color: #b63b4d;
+	color: #2980B9;
 }
 
 .accordion li.open span {
